fix: scrollbar hover colors

--- a/apps/common/main/resources/less/scroller.less
+++ b/apps/common/main/resources/less/scroller.less
@@ -79,9 +79,13 @@
                 &.always-visible-x {
                     background-color: @canvas-scroll-thumb-hover-ie;
                     background-color: @canvas-scroll-thumb-hover;
-                    background-position: center -7px;
 
                     div {
+                        background-position: center -7px;
+                        .pixel-ratio__1_75 & {
+                            background-position: center -6px;
+                        }
+
                         .pixel-ratio__2_5 & {
                             background-color: @canvas-scroll-arrow-hover;
                         }
@@ -100,9 +104,13 @@
                     background-color: @canvas-scroll-thumb-hover;
                     border-color: @canvas-scroll-thumb-border-hover-ie;
                     border-color: @canvas-scroll-thumb-border-hover;
-                    background-position: center -7px;
 
                     div {
+                        background-position: center -7px;
+                        .pixel-ratio__1_75 & {
+                            background-position: center -6px;
+                        }
+
                         .pixel-ratio__2_5 & {
                             background-color: @canvas-scroll-arrow-hover;
                         }
@@ -195,6 +203,11 @@
                     background-color: @canvas-scroll-thumb-hover;
 
                     div {
+                        background-position: -7px center;
+                        .pixel-ratio__1_75 & {
+                            background-position: -6px center;
+                        }
+
                         .pixel-ratio__2_5 & {
                             background-color: @canvas-scroll-arrow-hover;
                         }
@@ -215,6 +228,7 @@
                     border-color: @canvas-scroll-thumb-border-hover;
 
                     div {
+                        background-position: -7px center;
                         .pixel-ratio__2_5 & {
                             background-color: @canvas-scroll-arrow-hover;
                         }
